# KryosEngine

./: .editorconfig  CMakeLists.txt  DebugBuildRun.bat  DebugBuildRun.sh
Assets/Shaders/Phong/: Phong.json  PhongFrag.glsl
Editor/: CMakeLists.txt
Editor/Main/: Main.cpp
Engine/: CMakeLists.txt
Engine/Core/: Console.cpp  Console.h  Input.cpp  Input.h  InputKeyCodes.h
Engine/RHI/: Context.cpp  Context.h  Shader.h  WindowHandle.cpp  WindowHandle.h
Engine/RHI/OpenGL/: Shader.cpp  WindowHandle.cpp
Engine/RHI/opengl/: WindowHandle.cpp
Engine/Renderer/: Context.cpp  Context.h
